tests/ui-msrv/diagnostic-not-implemented-from-zeros.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-from-zeros.rs:16:24
   |
16 |     takes_from_zeros::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_from_zeros`
  --> tests/ui-msrv/diagnostic-not-implemented-from-zeros.rs:19:24
   |
19 | fn takes_from_zeros<T: FromZeros>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_zeros`
